# hydra

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CNAME  CPackConfig.cmake  CPackSourceConfig.cmake  GameboyEmu.sln  GameboyEmuTKP.sln  LICENSE  Makefile  PKGBUILD  PLAY.md  README.md  TKPEmu.sln  TOML.md  VENDORED.md  cmake_install.cmake  exported.json  gb_README.md  hydra.js  index.html  patch  resources.qrc
GameboyEmuTKP/: gpu.h  (+7 more)
TKPEmu/: CMakeLists.txt  TKPDownload.cmake  TKPEmu.vcxproj  TKPEmu.vcxproj.filters  emulator.cpp  emulator.h  httplib.h  main  main.cpp  resources.qrc  test.sh  tkp_snippets.code-snippets
TKPEmu/Display/: display.cpp  display.h
TKPEmu/Display/Applications/: application_settings.h  base_application.h  base_disassembler.h  base_tracelogger.h  disassembler.h  imfilebrowser.h  settings.h  widget_keyselector.h
TKPEmu/Gameboy/: README.md  gameboy.cpp  gameboy.h
TKPEmu/Gameboy/Bus/: bus.cpp  bus.h
TKPEmu/Gameboy/CPU/: cpu.cpp  cpu.h
TKPEmu/Gameboy/Cartridge/: cartridge.cpp  cartridge.h
TKPEmu/Gameboy/PPU/: ppu.cpp  ppu.h
TKPEmu/Gameboy/Utils/: breakpoint.h  cpu_const.h  disassembler.h  tracelogger.cpp  tracelogger.h
TKPEmu/ImGui/: imgui_impl_opengl3.cpp
TKPEmu/Tools/: TKPImage.h  disassembly_instr.cpp  disassembly_instr.h  prettyprinter.h  settings_manager.cpp  settings_manager.h
TKPEmu/data/: about.html  chip8.json  gameboy.json  matches.json
TKPEmu/gb_tkp/: CMakeLists.txt  README.md  TEST_RESULTS.md  gameboy.cpp  gameboy.h  gb_addresses.h  gb_breakpoint.h  gb_bus.cpp  gb_bus.h  gb_cartridge.cpp  gb_cartridge.h  gb_cpu.cpp  gb_cpu.h  gb_disassembler.cpp  gb_disassembler.h  gb_ppu.cpp  gb_ppu.h  gb_romdata.cpp  gb_romdata.h  gb_timer.cpp  gb_timer.h  gb_tracelogger.cpp  gb_tracelogger.h  generate_test_results.sh
TKPEmu/glad/: CMakeLists.txt  glad.c
TKPEmu/glad/glad/: glad.h
TKPEmu/glad/src/: glad.c
TKPEmu/include/: TKPImage.h  base_application.h  base_disassembler.h  base_tracelogger.h  breakpoint.h  bus.h  cartridge.h  cpu.h  cpu_const.h  disassembler.h  disassembly_instr.h  display.h  emulator.h  emulator_disassembler.hxx  emulator_factory.h  emulator_includes.h  emulator_results.h  emulator_types.hxx  emulator_user_data.hxx  error_factory.hxx  gameboy.h  gb_addresses.h  gb_bus.h  gb_cpu.h  gb_disassembler.h  gb_ppu.h  gb_start_options.h  gb_tracelogger.h  generic_disassembler.h  generic_drawable.h  generic_tool_make.h  imfilebrowser.h  ppu.h  prettyprinter.h  settings_manager.h  start_options.hxx  start_parameters.h  tracelogger.h  version.h  widget_keyselector.h
TKPEmu/lib/: CMakeLists.txt  imgui.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  messagequeue.cxx  messagequeue.hxx  str_hash.h  widget_keyselector.cpp  widget_keyselector.h
TKPEmu/qt/: aboutwindow.cxx  aboutwindow.hxx  debuggerwindow.cxx  debuggerwindow.hxx  main.cxx  mainwindow.cxx  mainwindow.hxx  settingswindow.cxx  settingswindow.hxx  traceloggerwindow.cxx  traceloggerwindow.hxx
TKPEmu/src/: CMakeLists.txt  base_application.cpp  base_tracelogger.cpp  bus.cpp  cartridge.cpp  cpu.cpp  disassembly_instr.cpp  display.cpp  emulator.cpp  emulator_factory.cpp  emulator_results.cpp  emulator_user_data.cxx  gameboy.cpp  gb_bus.cpp  gb_cartridge.cpp  gb_cpu.cpp  gb_ppu.cpp  gb_tracelogger.cpp  generic_disassembler.cpp  generic_disassembler.h  ppu.cpp  prettyprinter.cpp  settings_manager.cpp  tracelogger.cpp  widget_keyselector.cpp
go/: CMakeLists.txt  README.md  downloader.go  downloader.h  go.mod
hydra/: CMakeLists.txt  compile_commands.json  disasm  profile.sh  resources.qrc
hydra/c8/: CMakeLists.txt  LICENSE  c8_tkpwrapper.hxx
hydra/data/: about.html  chip8.json  emulators.json  gameboy.json  mappings.json
hydra/gb/: README.md  expected_results.csv  gb_apu.h  gb_apu_ch.cpp  gb_bus.h  gb_cartridge.cpp  gb_timer.cpp  gb_timer.h  gb_tkpwrapper.cpp  gb_tkpwrapper.h  gb_wiiwrapper.cpp
hydra/include/: console_colors.h  crc32.h  emulator.h  emulator_data.hxx  emulator_factory.h  emulator_settings.hxx  emulator_types.hxx  emulator_user_data.hxx  log.hxx  str_hash.h  version.h
hydra/lib/: messagequeue.cxx  messagequeue.hxx  threadpool.hxx
hydra/n64/: CMakeLists.txt
hydra/n64/core/: cp0_regs.def  n64_addresses.hxx  n64_ai.cxx  n64_ai.hxx  n64_cpudisassemble.cxx  n64_cpuinstructions_branch.cxx  n64_cpuinstructions_float.cxx  n64_cpuinstructions_special.cxx  n64_cpuscheduler.cxx  n64_impl.hxx  n64_keys.hxx  n64_rcp.hxx  n64_rdp.hxx  n64_rdp_commands.hxx  n64_rsp.hxx  n64_rsp_vu.cxx  n64_sm64_helper.hxx  utils.hxx
hydra/nes/: nes_apu.cxx  nes_cpu.hxx  nes_cpubus.cxx  nes_cpubus.hxx  nes_joypad.hxx  nes_ppu.cxx  nes_tkpwrapper.cxx  nes_tkpwrapper.hxx
hydra/qt/: aboutwindow.hxx  debuggerwindow.cxx  debuggerwindow.hxx  emulator_tool_factory.hxx  keypicker.cxx  main.cxx  mainwindow.cxx  mainwindow.hxx  n64_debugger.cxx  n64_debugger.hxx  nes_ppuviewer.hxx  screenwidget.cxx  screenwidget.hxx  settingswindow.cxx  settingswindow.hxx  shadereditor.cxx  shadereditor.hxx  traceloggerwindow.cxx  traceloggerwindow.hxx
hydra/shaders/: simple.fs
hydra/src/: CMakeLists.txt  emulator.cpp  emulator_factory.cpp  emulator_settings.cxx  emulator_user_data.cxx
n64/: CMakeLists.txt  README.md  core.cxx  n64_hc.cxx  n64_hc.hxx  n64_tkpwrapper.cxx  n64_tkpwrapper.hxx
n64/core/: n64_addresses.hxx  n64_ai.cxx  n64_ai.hxx  n64_cpu.cxx  n64_cpu.hxx  n64_cpubus.cxx  n64_cpudisassemble.cxx  n64_cpuexceptions.cxx  n64_cpuinstructions.cxx  n64_cpuinstructions_branch.cxx  n64_cpuinstructions_float.cxx  n64_cpuinstructions_loadstore.cxx  n64_cpuinstructions_special.cxx  n64_cpuscheduler.cxx  n64_impl.cxx  n64_impl.hxx  n64_keys.hxx  n64_rcp.cxx  n64_rcp.hxx  n64_rdp.cxx  n64_rdp.hxx  n64_rdp_commands.hxx  n64_rsp.cxx  n64_rsp.hxx  n64_rsp_su.cxx  n64_rsp_vu.cxx  n64_types.hxx  n64_vi.cxx  n64_vi.hxx
n64/experimental/: n64_cpudisassemble.cxx  n64_register_allocation.hxx  n64_rsp_jit.cxx  n64_rsp_jit.hxx
n64/qa/: n64_angrylion_replayer.cxx  n64_angrylion_replayer.hxx  n64_rdp_qa.cxx  stb_image.h
(+315 files in other folders)
